<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export_locations"
        android:title="@string/export_locations"
        android:icon="@drawable/ic_export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import_locations"
        android:title="@string/import_locations"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export_json"
        android:title="@string/export_location_json"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_csv"
        android:title="@string/export_location_csv"
        app:showAsAction="never" />

</menu>
