<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_export_entries"
        android:title="@string/export_log"
        android:icon="@drawable/ic_export"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import_entries"
        android:title="@string/import_entries"
        android:icon="@drawable/ic_import"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_entries"
        android:title="@string/delete_entries"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about_app"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
