<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete_tags"
        android:title="@string/delete_tags"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="1"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export_tags"
        android:title="@string/export_tags"
        android:icon="@drawable/ic_export"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import_tags"
        android:title="@string/import_tags"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_export_import"
        android:title="@string/help_export_import"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>
